--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,12 @@ pandas = "^1.5.3"
 scikit-learn = "^1.2.1"
 matplotlib = "^3.7.1"
 seaborn = "^0.12.2"
+torch = {url = "https://download.pytorch.org/whl/cu117/torch-1.13.1%2Bcu117-cp39-cp39-win_amd64.whl"}
+imbalanced-learn = "^0.10.1"
 
+
+[tool.poetry.group.dev.dependencies]
+poethepoet = "^0.18.1"
 
 [build-system]
 requires = ["poetry-core"]
